@@ -56,6 +56,7 @@ function (containerMenuClass, itemClass, prefixClass, lengthFieldClass, selectMe
         .upgradeTo(this);
         //._init();
       obj.value="";
+      obj.defaultTextValue = "CI";
       return obj;
     },
     add : function (letter) {
@@ -67,25 +68,18 @@ function (containerMenuClass, itemClass, prefixClass, lengthFieldClass, selectMe
     further : function () {
       this.value = this.value + this.value;
     },
+    isSelectable : function () {
+      return (this.value !== "");
+    },
+    chop : function () {
+      console.log("chop");
+      console.log(this.content(this.value));
+    },
     onclick : function () {
-      console.log('ContainerItem' + this.value);
+      console.log('ContainerItem ' + this.value);
       console.log(this._i);
       this._menu.limit(this._i);
       this._menu.show();
-    },
-    element : function () {
-      // already defined
-      if (this._el !== undefined) return this._el;
-      
-      // Create list item
-      const li = document.createElement("li");
-      li.innerHTML="CI";
-  
-      // Connect action
-      if (this["onclick"] !== undefined) {
-        li["onclick"] = this.onclick.bind(this);
-      };    
-      return this._el = li;
     }
   };
   //List of items.
@@ -217,6 +211,8 @@ function (containerMenuClass, itemClass, prefixClass, lengthFieldClass, selectMe
   */
   document.getElementById('menu').appendChild(menu.element());
   //document.getElementById('largemenu').appendChild(largeMenu.element());
+
+  menu.container().addItem({ value : "Dynamically added", defaultTextValue : "dynamic", _i : 5})
 
   menu.limit(3).show(3);
   menu.focus();
